@@ -43,7 +43,7 @@ class Plugin(object):
     def _display_port_error_dialog(self, error):
             err, msg = error
             self.stop()
-            dialog = gtk.MessageDialog(self.garmon, gtk.DIALOG_DESTROY_WITH_PARENT,
+            dialog = gtk.MessageDialog(self.app, gtk.DIALOG_DESTROY_WITH_PARENT,
                                                     gtk.MESSAGE_WARNING, gtk.BUTTONS_YES_NO,
                                                     err + '\n\n' + msg + '\n\n' + 
                                                     _("Please make sure the device is connected.")
@@ -56,5 +56,5 @@ class Plugin(object):
     def _port_error_dialog_response(self, dialog, response):
         dialog.destroy()
         if response == gtk.RESPONSE_YES:
-            self.garmon.activate_reset(None)
+            self.app.reset()
    
